# of-vscode-project-generator-rs

./: Cargo.toml  README.md
src/: main.rs
