[package]
name = "of-vscode-project-generator-rs"
version = "0.1.5"
edition = "2024"
repository = "https://github.com/funatsufumiya/of-vscode-project-generator-rs"
description = "openFrameworks VSCode Project Generator (for static analysis only)"
license = "WTFPL OR 0BSD"

[dependencies]
argparse = "0.2.2"
env_logger = "0.11.8"
log = "0.4.27"
once_cell = "1.21.3"
serde_json = "1.0.142"
