[package]
name = "of-vscode-project-generator-rs"
version = "0.1.7"
edition = "2024"
repository = "https://github.com/funatsufumiya/of-vscode-project-generator-rs"
description = "openFrameworks VSCode Project Generator (for static analysis only)"
license = "WTFPL OR 0BSD"

[dependencies]
argparse = "0.2.2"
env_logger = "0.11.10"
log = "0.4.29"
once_cell = "1.21.4"
serde_json = "1.0.149"
